修改部分问题，引入asset多任务

--- a/TestCases/全局变量_Android.properties
+++ b/TestCases/全局变量_Android.properties
@@ -9,4 +9,5 @@ $RWBackFlightInfo = 国航CA1831
 $DeletePerson = f3_button_person_list_select
 $AddPerson = f3_boarding_person
 $ContactPhone = EditText
+$ToastView = toast_message
 $CVV2 = 签名栏末尾最后3位
