--- a/TestCases/全局变量_IOS.properties
+++ b/TestCases/全局变量_IOS.properties
@@ -5,9 +5,10 @@ $Retry = 重试
 $SorryLoadFail = 抱歉
 $Know = 知道了
 $RWFromFlightInfo = 国航CA1858 330大
-$RWBackFlightInfo = 国航CA1831 773大
+$RWBackFlightInfo = 国航CA1831 33A大
 $DeletePerson = icon del2
 $AddPerson = btn flightadd
 $ContactPhone = UITextField
 $ToastView = CTToastTipView
 $CVV2 = 签名末尾处最后3位
+$RepeatOrder =  继续预订
