--- a/config/auto.properties
+++ b/config/auto.properties
@@ -1,3 +1,3 @@
 ServerPort = 6100
-TestCasesPath = D:\\UIAutoServer\\TestCases\\
-ResultOutPath =  D:\\UIAutoServer\\TestResult\\
+TestCasesPath = /Users/yrguo/work/UIAutoServer/TestCases/
+ResultOutPath =  /Users/yrguo/work/UIAutoServer/TestResult/
